Fixed product overlap

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -28,7 +28,7 @@
 .products {
     display: grid;
     gap: 10px;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     justify-items: center;
 }
 
